# harley-bot

./: .gitignore  Dockerfile  build.sh  config-template.json  docker-compose.yml  emojis.json  main.py  pyproject.toml  readme.md  requirements.txt  run.sh  schema.sql
cogs/: GuildListeners.py  automod.py  checks.py  error_handler.py  fun.py  help_comm.py  info.py  ipc.py  meta.py  moderator.py  owner.py  settings.py  testing.py
cogs/listeners/: channels.py  guild.py  listeners.py  member.py  messages.py  moderation.py
postgres/: schema.sql
utils/: BaseEmbed.py  CustomConverters.py  CustomErrors.py  __init__.py  enums.py  flags.py  help.py  subclasses.py  utils.py
