[tool.poetry]
authors = ["Imvaskel <contact@vaskel.gay>"]
description = "A multipurpose discord bot."
license = "AGPL"
name = "harley-bot"
version = "0.1.0"

[tool.poetry.dependencies]
Markdown = "3.3.3"
aiohttp = "3.7.4.post0"
asyncdagpi = "^4.0.0"
asyncpg = "0.21.0"
coloredlogs = "^15.0.1"
discord-ext-ipc = "2.0.0"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
discord-ext-menus-views = {git = "https://github.com/oliver-ni/discord-ext-menus-views"}
"discord.py" = {git = "https://github.com/rapptz/discord.py"}
jishaku = {git = "https://github.com/Gorialis/jishaku"}
"mystbin.py" = "2.1.0"
polaroid = "^0.3.2"
psutil = "^5.8.0"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[tool.poetry.extras]
aiohttp = ["speedups"]
"discord.py" = ["speed"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
